--- a/NormativeCalculatorUI/client/src/app/nav/nav/nav.component.html
+++ b/NormativeCalculatorUI/client/src/app/nav/nav/nav.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" *ngIf="isUserLoggedIn">
     <div class="container">
       <a class="navbar-brand" routerLink='/' routerLinkActive='active'>Normative Calculator</a>
     
@@ -15,7 +15,7 @@
               <a class="nav-link" routerLink='/ingredients' routerLinkActive='active'>Ingredients</a>
             </li>
             <li class="nav-item ml-4">
-                <a class="nav-link" routerLink='/login' (click)="logout" routerLinkActive='active'>Logout</a>
+                <a class="nav-link"  (click)="logout()" routerLinkActive='active'>Logout</a>
               </li>
           </ng-container>
         </ul>
