--- a/NormativeCalculatorUI/client/src/app/recipe_categories/recipe-categories/recipe-categories.component.html
+++ b/NormativeCalculatorUI/client/src/app/recipe_categories/recipe-categories/recipe-categories.component.html
@@ -1,5 +1,6 @@
 <div class="container" style="margin-top: 100px;">
    <h1>Recipe Categories</h1>
+   
    <table class="table table-striped">
     <thead>
     <tr>
@@ -10,9 +11,10 @@
     <tbody>
     <tr *ngFor="let categories of recipeCategories">
       <td>{{categories.categoryName}}</td>
-      <td>View Details</td>
+      <td > <button [routerLink]="['/recipes/', categories.id]">View Recipes</button> </td> 
+
     </tr>
     </tbody>
   </table>
-  <button>Loda more</button>
+  <button type="button" (click)="loadMore()" [disabled]="!isLodaMore">Load more</button>
  </div>
