--- a/NormativeCalculatorUI/client/src/app/login/login/login.component.html
+++ b/NormativeCalculatorUI/client/src/app/login/login/login.component.html
@@ -1,7 +1,5 @@
-
- <!-- <h5>{{resultMessage}}</h5> -->
- <button (click)="googleLogIn()"> Google Login </button> 
-<!-- <button (click)="logInWithFacebook('Facebook')"> Facebook Login </button> -->
-<!-- <button  (click)="logOut()" class="btn btn-success Facebook">Sign Out</button> --> 
-
+<div class="container" style="margin-top: 200px; text-align: center;">
+<h5 style="margin-bottom: 15px;">Welcome to the Normative Calculator Application</h5> 
+ <button (click)="googleLogIn()" style="padding: 10px;"> Login with Google </button> 
+</div>
 
